--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Data" : {
+    "UserPersonApi" : {
+      "ConnectionString" : "Server=;Database=UserPersonApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
+  },
   "AllowedHosts": "*"
 }
